<?xml version="1.0"?>
<package format="2">
  <name>pacote_ros</name>
  <version>0.0.0</version>
  <description>The pacote_ros package</description>

  <maintainer email="marcos.pcy@gmail.com">marcos</maintainer>

  <license>TODO</license>

	 
  <url type="repository">https://github.com/marcoscomp/pacote_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
